@@ -381,7 +381,7 @@ namespace libtorrent
 							, error_msg));
 					}
 					m_statistics.received_bytes(0, bytes_transferred);
-					disconnect(errors::http_error, 1);
+					disconnect(error_code(m_parser.status_code(), get_http_category()), 1);
 #ifdef TORRENT_DEBUG
 					TORRENT_ASSERT(m_statistics.last_payload_downloaded()
 						+ m_statistics.last_protocol_downloaded()
